# backend/pkg/api/openapiv2/backend/pkg/api/proto/lab_api.swagger.json
@@ -17,8 +17,145 @@
   ],
   "paths": {},
   "definitions": {
+    "beacon_slotsLocallyBuiltBlock": {
+      "type": "object",
+      "properties": {
+        "slot": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "slotStartDateTime": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "metadata": {
+          "$ref": "#/definitions/beacon_slotsLocallyBuiltBlockMetadata"
+        },
+        "blockVersion": {
+          "type": "string"
+        },
+        "blockTotalBytes": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "blockTotalBytesCompressed": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "executionPayloadValue": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "consensusPayloadValue": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "executionPayloadBlockNumber": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "executionPayloadGasLimit": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "executionPayloadGasUsed": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "executionPayloadTransactionsCount": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "executionPayloadTransactionsTotalBytes": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "executionPayloadTransactionsTotalBytesCompressed": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "LocallyBuiltBlock represents a locally built block"
+    },
+    "beacon_slotsLocallyBuiltBlockMetadata": {
+      "type": "object",
+      "properties": {
+        "metaClientName": {
+          "type": "string"
+        },
+        "eventDateTime": {
+          "type": "string",
+          "format": "date-time"
+        },
+        "metaClientVersion": {
+          "type": "string"
+        },
+        "metaClientImplementation": {
+          "type": "string"
+        },
+        "metaClientGeoCity": {
+          "type": "string"
+        },
+        "metaClientGeoCountry": {
+          "type": "string"
+        },
+        "metaClientGeoCountryCode": {
+          "type": "string"
+        },
+        "metaClientGeoContinentCode": {
+          "type": "string"
+        },
+        "metaClientGeoLongitude": {
+          "type": "number",
+          "format": "double"
+        },
+        "metaClientGeoLatitude": {
+          "type": "number",
+          "format": "double"
+        },
+        "metaConsensusVersion": {
+          "type": "string"
+        },
+        "metaConsensusImplementation": {
+          "type": "string"
+        },
+        "metaNetworkName": {
+          "type": "string"
+        }
+      },
+      "title": "LocallyBuiltBlockMetadata contains metadata about the locally built block"
+    },
+    "beacon_slotsLocallyBuiltSlotBlocks": {
+      "type": "object",
+      "properties": {
+        "slot": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "blocks": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/beacon_slotsLocallyBuiltBlock"
+          }
+        }
+      },
+      "title": "LocallyBuiltSlotBlocks represents all locally built blocks observed for a specific slot"
+    },
     "labapiFrontendConfigResponse": {
       "type": "object"
+    },
+    "labapiGetRecentLocallyBuiltBlocksResponse": {
+      "type": "object",
+      "properties": {
+        "slotBlocks": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/beacon_slotsLocallyBuiltSlotBlocks"
+          }
+        }
+      }
     },
     "protobufAny": {
       "type": "object",
