# backend/pkg/api/proto/lab_api.pb.go
@@ -7,6 +7,7 @@
 package proto
 
 import (
+	beacon_slots "github.com/ethpandaops/lab/backend/pkg/server/proto/beacon_slots"
 	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
 	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
 	emptypb "google.golang.org/protobuf/types/known/emptypb"
@@ -59,6 +60,100 @@ func (*FrontendConfigResponse) Descriptor() ([]byte, []int) {
 	return file_backend_pkg_api_proto_lab_api_proto_rawDescGZIP(), []int{0}
 }
 
+type GetRecentLocallyBuiltBlocksRequest struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	Network string `protobuf:"bytes,1,opt,name=network,proto3" json:"network,omitempty"`
+}
+
+func (x *GetRecentLocallyBuiltBlocksRequest) Reset() {
+	*x = GetRecentLocallyBuiltBlocksRequest{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_backend_pkg_api_proto_lab_api_proto_msgTypes[1]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetRecentLocallyBuiltBlocksRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetRecentLocallyBuiltBlocksRequest) ProtoMessage() {}
+
+func (x *GetRecentLocallyBuiltBlocksRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_backend_pkg_api_proto_lab_api_proto_msgTypes[1]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetRecentLocallyBuiltBlocksRequest.ProtoReflect.Descriptor instead.
+func (*GetRecentLocallyBuiltBlocksRequest) Descriptor() ([]byte, []int) {
+	return file_backend_pkg_api_proto_lab_api_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetRecentLocallyBuiltBlocksRequest) GetNetwork() string {
+	if x != nil {
+		return x.Network
+	}
+	return ""
+}
+
+type GetRecentLocallyBuiltBlocksResponse struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	SlotBlocks []*beacon_slots.LocallyBuiltSlotBlocks `protobuf:"bytes,1,rep,name=slot_blocks,json=slotBlocks,proto3" json:"slot_blocks,omitempty"`
+}
+
+func (x *GetRecentLocallyBuiltBlocksResponse) Reset() {
+	*x = GetRecentLocallyBuiltBlocksResponse{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_backend_pkg_api_proto_lab_api_proto_msgTypes[2]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *GetRecentLocallyBuiltBlocksResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetRecentLocallyBuiltBlocksResponse) ProtoMessage() {}
+
+func (x *GetRecentLocallyBuiltBlocksResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_backend_pkg_api_proto_lab_api_proto_msgTypes[2]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetRecentLocallyBuiltBlocksResponse.ProtoReflect.Descriptor instead.
+func (*GetRecentLocallyBuiltBlocksResponse) Descriptor() ([]byte, []int) {
+	return file_backend_pkg_api_proto_lab_api_proto_rawDescGZIP(), []int{2}
+}
+
+func (x *GetRecentLocallyBuiltBlocksResponse) GetSlotBlocks() []*beacon_slots.LocallyBuiltSlotBlocks {
+	if x != nil {
+		return x.SlotBlocks
+	}
+	return nil
+}
+
 var File_backend_pkg_api_proto_lab_api_proto protoreflect.FileDescriptor
 
 var file_backend_pkg_api_proto_lab_api_proto_rawDesc = []byte{
@@ -66,18 +161,40 @@ var file_backend_pkg_api_proto_lab_api_proto_rawDesc = []byte{
 	0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x6c, 0x61, 0x62, 0x5f, 0x61, 0x70, 0x69, 0x2e,
 	0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x06, 0x6c, 0x61, 0x62, 0x61, 0x70, 0x69, 0x1a, 0x1b, 0x67,
 	0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2f, 0x65,
-	0x6d, 0x70, 0x74, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0x18, 0x0a, 0x16, 0x46, 0x72,
+	0x6d, 0x70, 0x74, 0x79, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x1a, 0x38, 0x62, 0x61, 0x63, 0x6b,
+	0x65, 0x6e, 0x64, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x2f, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x2f, 0x62, 0x65, 0x61, 0x63, 0x6f, 0x6e, 0x5f, 0x73, 0x6c, 0x6f, 0x74,
+	0x73, 0x2f, 0x62, 0x65, 0x61, 0x63, 0x6f, 0x6e, 0x5f, 0x73, 0x6c, 0x6f, 0x74, 0x73, 0x2e, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x22, 0x18, 0x0a, 0x16, 0x46, 0x72, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x64,
+	0x43, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x3e,
+	0x0a, 0x22, 0x47, 0x65, 0x74, 0x52, 0x65, 0x63, 0x65, 0x6e, 0x74, 0x4c, 0x6f, 0x63, 0x61, 0x6c,
+	0x6c, 0x79, 0x42, 0x75, 0x69, 0x6c, 0x74, 0x42, 0x6c, 0x6f, 0x63, 0x6b, 0x73, 0x52, 0x65, 0x71,
+	0x75, 0x65, 0x73, 0x74, 0x12, 0x18, 0x0a, 0x07, 0x6e, 0x65, 0x74, 0x77, 0x6f, 0x72, 0x6b, 0x18,
+	0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x6e, 0x65, 0x74, 0x77, 0x6f, 0x72, 0x6b, 0x22, 0x6c,
+	0x0a, 0x23, 0x47, 0x65, 0x74, 0x52, 0x65, 0x63, 0x65, 0x6e, 0x74, 0x4c, 0x6f, 0x63, 0x61, 0x6c,
+	0x6c, 0x79, 0x42, 0x75, 0x69, 0x6c, 0x74, 0x42, 0x6c, 0x6f, 0x63, 0x6b, 0x73, 0x52, 0x65, 0x73,
+	0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x45, 0x0a, 0x0b, 0x73, 0x6c, 0x6f, 0x74, 0x5f, 0x62, 0x6c,
+	0x6f, 0x63, 0x6b, 0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x24, 0x2e, 0x62, 0x65, 0x61,
+	0x63, 0x6f, 0x6e, 0x5f, 0x73, 0x6c, 0x6f, 0x74, 0x73, 0x2e, 0x4c, 0x6f, 0x63, 0x61, 0x6c, 0x6c,
+	0x79, 0x42, 0x75, 0x69, 0x6c, 0x74, 0x53, 0x6c, 0x6f, 0x74, 0x42, 0x6c, 0x6f, 0x63, 0x6b, 0x73,
+	0x52, 0x0a, 0x73, 0x6c, 0x6f, 0x74, 0x42, 0x6c, 0x6f, 0x63, 0x6b, 0x73, 0x32, 0xd1, 0x01, 0x0a,
+	0x06, 0x4c, 0x61, 0x62, 0x41, 0x50, 0x49, 0x12, 0x4d, 0x0a, 0x11, 0x47, 0x65, 0x74, 0x46, 0x72,
+	0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x64, 0x43, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x12, 0x16, 0x2e, 0x67,
+	0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45,
+	0x6d, 0x70, 0x74, 0x79, 0x1a, 0x1e, 0x2e, 0x6c, 0x61, 0x62, 0x61, 0x70, 0x69, 0x2e, 0x46, 0x72,
 	0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x64, 0x43, 0x6f, 0x6e, 0x66, 0x69, 0x67, 0x52, 0x65, 0x73, 0x70,
-	0x6f, 0x6e, 0x73, 0x65, 0x32, 0x57, 0x0a, 0x06, 0x4c, 0x61, 0x62, 0x41, 0x50, 0x49, 0x12, 0x4d,
-	0x0a, 0x11, 0x47, 0x65, 0x74, 0x46, 0x72, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x64, 0x43, 0x6f, 0x6e,
-	0x66, 0x69, 0x67, 0x12, 0x16, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x45, 0x6d, 0x70, 0x74, 0x79, 0x1a, 0x1e, 0x2e, 0x6c, 0x61,
-	0x62, 0x61, 0x70, 0x69, 0x2e, 0x46, 0x72, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x64, 0x43, 0x6f, 0x6e,
-	0x66, 0x69, 0x67, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x42, 0x32, 0x5a,
-	0x30, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x65, 0x74, 0x68, 0x70,
-	0x61, 0x6e, 0x64, 0x61, 0x6f, 0x70, 0x73, 0x2f, 0x6c, 0x61, 0x62, 0x2f, 0x62, 0x61, 0x63, 0x6b,
-	0x65, 0x6e, 0x64, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00, 0x12, 0x78, 0x0a, 0x1b, 0x47, 0x65, 0x74, 0x52, 0x65, 0x63,
+	0x65, 0x6e, 0x74, 0x4c, 0x6f, 0x63, 0x61, 0x6c, 0x6c, 0x79, 0x42, 0x75, 0x69, 0x6c, 0x74, 0x42,
+	0x6c, 0x6f, 0x63, 0x6b, 0x73, 0x12, 0x2a, 0x2e, 0x6c, 0x61, 0x62, 0x61, 0x70, 0x69, 0x2e, 0x47,
+	0x65, 0x74, 0x52, 0x65, 0x63, 0x65, 0x6e, 0x74, 0x4c, 0x6f, 0x63, 0x61, 0x6c, 0x6c, 0x79, 0x42,
+	0x75, 0x69, 0x6c, 0x74, 0x42, 0x6c, 0x6f, 0x63, 0x6b, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73,
+	0x74, 0x1a, 0x2b, 0x2e, 0x6c, 0x61, 0x62, 0x61, 0x70, 0x69, 0x2e, 0x47, 0x65, 0x74, 0x52, 0x65,
+	0x63, 0x65, 0x6e, 0x74, 0x4c, 0x6f, 0x63, 0x61, 0x6c, 0x6c, 0x79, 0x42, 0x75, 0x69, 0x6c, 0x74,
+	0x42, 0x6c, 0x6f, 0x63, 0x6b, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x00,
+	0x42, 0x32, 0x5a, 0x30, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x65,
+	0x74, 0x68, 0x70, 0x61, 0x6e, 0x64, 0x61, 0x6f, 0x70, 0x73, 0x2f, 0x6c, 0x61, 0x62, 0x2f, 0x62,
+	0x61, 0x63, 0x6b, 0x65, 0x6e, 0x64, 0x2f, 0x70, 0x6b, 0x67, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -92,19 +209,25 @@ func file_backend_pkg_api_proto_lab_api_proto_rawDescGZIP() []byte {
 	return file_backend_pkg_api_proto_lab_api_proto_rawDescData
 }
 
-var file_backend_pkg_api_proto_lab_api_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_backend_pkg_api_proto_lab_api_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
 var file_backend_pkg_api_proto_lab_api_proto_goTypes = []any{
-	(*FrontendConfigResponse)(nil), // 0: labapi.FrontendConfigResponse
-	(*emptypb.Empty)(nil),          // 1: google.protobuf.Empty
+	(*FrontendConfigResponse)(nil),              // 0: labapi.FrontendConfigResponse
+	(*GetRecentLocallyBuiltBlocksRequest)(nil),  // 1: labapi.GetRecentLocallyBuiltBlocksRequest
+	(*GetRecentLocallyBuiltBlocksResponse)(nil), // 2: labapi.GetRecentLocallyBuiltBlocksResponse
+	(*beacon_slots.LocallyBuiltSlotBlocks)(nil), // 3: beacon_slots.LocallyBuiltSlotBlocks
+	(*emptypb.Empty)(nil),                       // 4: google.protobuf.Empty
 }
 var file_backend_pkg_api_proto_lab_api_proto_depIdxs = []int32{
-	1, // 0: labapi.LabAPI.GetFrontendConfig:input_type -> google.protobuf.Empty
-	0, // 1: labapi.LabAPI.GetFrontendConfig:output_type -> labapi.FrontendConfigResponse
-	1, // [1:2] is the sub-list for method output_type
-	0, // [0:1] is the sub-list for method input_type
-	0, // [0:0] is the sub-list for extension type_name
-	0, // [0:0] is the sub-list for extension extendee
-	0, // [0:0] is the sub-list for field type_name
+	3, // 0: labapi.GetRecentLocallyBuiltBlocksResponse.slot_blocks:type_name -> beacon_slots.LocallyBuiltSlotBlocks
+	4, // 1: labapi.LabAPI.GetFrontendConfig:input_type -> google.protobuf.Empty
+	1, // 2: labapi.LabAPI.GetRecentLocallyBuiltBlocks:input_type -> labapi.GetRecentLocallyBuiltBlocksRequest
+	0, // 3: labapi.LabAPI.GetFrontendConfig:output_type -> labapi.FrontendConfigResponse
+	2, // 4: labapi.LabAPI.GetRecentLocallyBuiltBlocks:output_type -> labapi.GetRecentLocallyBuiltBlocksResponse
+	3, // [3:5] is the sub-list for method output_type
+	1, // [1:3] is the sub-list for method input_type
+	1, // [1:1] is the sub-list for extension type_name
+	1, // [1:1] is the sub-list for extension extendee
+	0, // [0:1] is the sub-list for field type_name
 }
 
 func init() { file_backend_pkg_api_proto_lab_api_proto_init() }
@@ -125,6 +248,30 @@ func file_backend_pkg_api_proto_lab_api_proto_init() {
 				return nil
 			}
 		}
+		file_backend_pkg_api_proto_lab_api_proto_msgTypes[1].Exporter = func(v any, i int) any {
+			switch v := v.(*GetRecentLocallyBuiltBlocksRequest); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
+		file_backend_pkg_api_proto_lab_api_proto_msgTypes[2].Exporter = func(v any, i int) any {
+			switch v := v.(*GetRecentLocallyBuiltBlocksResponse); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -132,7 +279,7 @@ func file_backend_pkg_api_proto_lab_api_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_backend_pkg_api_proto_lab_api_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   1,
+			NumMessages:   3,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
