# backend/pkg/api/proto/lab_api.pb.gw.go
@@ -66,6 +66,58 @@ func local_request_LabAPI_GetFrontendConfig_0(ctx context.Context, marshaler run
 
 }
 
+func request_LabAPI_GetRecentLocallyBuiltBlocks_0(ctx context.Context, marshaler runtime.Marshaler, client LabAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetRecentLocallyBuiltBlocksRequest
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["network"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "network")
+	}
+
+	protoReq.Network, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "network", err)
+	}
+
+	msg, err := client.GetRecentLocallyBuiltBlocks(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+
+}
+
+func local_request_LabAPI_GetRecentLocallyBuiltBlocks_0(ctx context.Context, marshaler runtime.Marshaler, server LabAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var protoReq GetRecentLocallyBuiltBlocksRequest
+	var metadata runtime.ServerMetadata
+
+	var (
+		val string
+		ok  bool
+		err error
+		_   = err
+	)
+
+	val, ok = pathParams["network"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "network")
+	}
+
+	protoReq.Network, err = runtime.String(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "network", err)
+	}
+
+	msg, err := server.GetRecentLocallyBuiltBlocks(ctx, &protoReq)
+	return msg, metadata, err
+
+}
+
 // RegisterLabAPIHandlerServer registers the http handlers for service LabAPI to "mux".
 // UnaryRPC     :call LabAPIServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -94,6 +146,31 @@ func RegisterLabAPIHandlerServer(ctx context.Context, mux *runtime.ServeMux, ser
 		}
 
 		forward_LabAPI_GetFrontendConfig_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
+	mux.Handle("GET", pattern_LabAPI_GetRecentLocallyBuiltBlocks_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/labapi.LabAPI/GetRecentLocallyBuiltBlocks", runtime.WithHTTPPathPattern("/v1/beacon/local_blocks/{network}/latest"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_LabAPI_GetRecentLocallyBuiltBlocks_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_LabAPI_GetRecentLocallyBuiltBlocks_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -160,13 +237,39 @@ func RegisterLabAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux, cli
 
 	})
 
+	mux.Handle("GET", pattern_LabAPI_GetRecentLocallyBuiltBlocks_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		var err error
+		var annotatedContext context.Context
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/labapi.LabAPI/GetRecentLocallyBuiltBlocks", runtime.WithHTTPPathPattern("/v1/beacon/local_blocks/{network}/latest"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_LabAPI_GetRecentLocallyBuiltBlocks_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+
+		forward_LabAPI_GetRecentLocallyBuiltBlocks_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+
+	})
+
 	return nil
 }
 
 var (
 	pattern_LabAPI_GetFrontendConfig_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"labapi.LabAPI", "GetFrontendConfig"}, ""))
+
+	pattern_LabAPI_GetRecentLocallyBuiltBlocks_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4}, []string{"v1", "beacon", "local_blocks", "network", "latest"}, ""))
 )
 
 var (
 	forward_LabAPI_GetFrontendConfig_0 = runtime.ForwardResponseMessage
+
+	forward_LabAPI_GetRecentLocallyBuiltBlocks_0 = runtime.ForwardResponseMessage
 )
